changed library for now to fix bot crash

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.27.2",
-    "cheerio": "^1.0.0-rc.10",
+    "cheerio": "^1.0.0-rc.12",
     "download-file": "^0.1.5",
     "facebook-video-downloader": "^1.0.1",
     "fb-tools": "^2.1.0",
@@ -19,18 +19,18 @@
     "fbvideos": "^1.0.2",
     "json-find": "^2.0.8",
     "jssoup": "0.0.15",
-    "luxon": "^2.3.2",
+    "luxon": "^3.0.1",
     "pretty": "^2.0.0",
-    "selenium-webdriver": "^4.1.2",
+    "selenium-webdriver": "^4.3.1",
     "shortid": "^2.2.16",
-    "venom-bot": "^4.0.11",
-    "video-extractor": "^3.0.0",
+    "venom-bot": "github:renandecarlo/venom",
+    "video-extractor": "^3.0.2",
     "video-url-link": "^0.1.5",
     "videolinkapi": "^1.0.0",
     "vivatube": "^2.0.6",
     "x-ray": "^2.3.4",
     "youtube-dl": "^3.5.0",
-    "youtube-dl-exec": "^2.0.11",
+    "youtube-dl-exec": "^2.1.2",
     "youtube-dl-wrap": "^2.1.1",
     "ytdl-core": "^4.11.0"
   }
